kubernetes/conduit-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit-backend
spec:
  selector:
    matchLabels:
      app: conduit-backend
  template:
    metadata:
      labels:
        app: conduit-backend
    spec:
      containers:
        - name: conduit-backend
          image: antcolonydevops/node-express
          ports:
            - containerPort: 3000
         
          # Ovo ne radi, moram jos istraziti zasto
          # envFrom:
          #   - secretRef:
          #       name: conduit-backend-secret 
          
            
      imagePullSecrets: 
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: conduit-backend
spec:
  selector:
    app: conduit-backend
  ports:
  - port: 3000
    targetPort: 3000
