kubernetes/conduit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conduit-ingress
  labels:
    name: conduit-ingress
spec:
  rules:
  - host: conduit.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: conduit-frontend
            port: 
              number: 4100
